# axb

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
axb/: api.py  axclient.py  create.py  evaluate.py
axb/tests/: test_api.py  test_optimization.py  utils.py
axb/tests/create/: create_hartmann.json
tests/: test_api.py
tests/create/: create_hartmann.json
tests/generate/: generate.json
tests/register/: register.json
tests/status/: status.json
